change encoder to p-tuning style; testing encoder in try.ipynb; TODO: merge prompt and input embeddings

--- a/test.ipynb
+++ b/test.ipynb
@@ -133,43 +133,97 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from peft import PeftModelForSeq2SeqLM\n",
+    "from peft import PeftModelForSeq2SeqLM, PeftConfig, PromptEncoderReparameterizationType, PromptEncoderConfig\n",
     "from peft.tuners.prefix_tuning import PrefixEncoder\n",
+    "from peft.tuners.p_tuning import PromptEncoder\n",
     "from peft.utils import _get_batch_size, PeftType, TaskType, TRANSFORMERS_MODELS_TO_PREFIX_TUNING_POSTPROCESS_MAPPING\n",
     "from transformers import PreTrainedModel, DynamicCache, EncoderDecoderCache, map_cache_to_layer_device_map\n",
     "from typing import Optional\n",
     "import torch\n",
     "import numpy as np\n",
     "import warnings\n",
+    "from dataclasses import dataclass, field\n",
+    "\n",
+    "@dataclass\n",
+    "class AbstractPromptEncoderConfig(PromptEncoderConfig):\n",
+    "    \"\"\"\n",
+    "    This is the configuration class to store the configuration of a [`PromptEncoder`].\n",
+    "\n",
+    "    Args:\n",
+    "        encoder_reparameterization_type (Union[[`PromptEncoderReparameterizationType`], `str`]):\n",
+    "            The type of reparameterization to use.\n",
+    "        encoder_hidden_size (`int`): The hidden size of the prompt encoder.\n",
+    "        encoder_num_layers (`int`): The number of layers of the prompt encoder.\n",
+    "        encoder_dropout (`float`): The dropout probability of the prompt encoder.\n",
+    "    \"\"\"\n",
+    "\n",
+    "    num_subjects: int = field(\n",
+    "        default=8,\n",
+    "        metadata={\"help\": \"The number of subjects of the prompt encoder\"},\n",
+    "    )\n",
+    "    padding_idx: int = field(\n",
+    "        default=None,\n",
+    "        metadata={\"help\": \"The padding index of the prompt encoder\"},\n",
+    "    )\n",
+    "    def __post_init__(self):\n",
+    "        super().__post_init__()\n",
+    "        self.peft_type = PeftType.P_TUNING #TODO: switch to APTuning\n",
     "\n",
     "\n",
-    "\n",
-    "class ObjectivePrefixEncoder(PrefixEncoder):\n",
+    "class AbstractPromptEncoder(PromptEncoder):\n",
     "    def __init__(self, config):\n",
-    "        super().__init__()\n",
-    "        self.prefix_projection = config.prefix_projection\n",
-    "        token_dim = config.token_dim\n",
-    "        num_layers = config.num_layers\n",
-    "        encoder_hidden_size = config.encoder_hidden_size\n",
-    "        num_embeddings = config.num_virtual_tokens * config.num_objects\n",
+    "        super().__init__(config)\n",
+    "        self.num_subjects = config.num_subjects\n",
+    "        self.total_virtual_tokens = config.num_virtual_tokens * config.num_subjects * config.num_transformer_submodules\n",
     "        if config.padding_idx is not None:\n",
     "            self.padding_idx = config.padding_idx\n",
     "        else:\n",
-    "            self.padding_idx = num_embeddings\n",
-    "            num_embeddings += 1\n",
-    "        if self.prefix_projection and not config.inference_mode:\n",
-    "            # Use a two-layer MLP to encode the prefix\n",
-    "            self.embedding = torch.nn.Embedding(num_embeddings, token_dim, padding_idx=self.padding_idx)\n",
-    "            self.transform = torch.nn.Sequential(\n",
-    "                torch.nn.Linear(token_dim, encoder_hidden_size),\n",
-    "                torch.nn.Tanh(),\n",
-    "                torch.nn.Linear(encoder_hidden_size, num_layers * 2 * token_dim),\n",
-    "            )\n",
-    "        else:\n",
-    "            self.embedding = torch.nn.Embedding(num_embeddings, num_layers * 2 * token_dim, padding_idx=self.padding_idx)\n",
+    "            self.padding_idx = self.total_virtual_tokens\n",
+    "            self.total_virtual_tokens += 1\n",
+    "\n",
+    "        # embedding\n",
+    "        self.embedding = torch.nn.Embedding(self.total_virtual_tokens, self.token_dim, padding_idx=self.padding_idx)\n",
+    "        if not config.inference_mode:\n",
+    "            if self.encoder_type == PromptEncoderReparameterizationType.LSTM:\n",
+    "                lstm_dropout = config.encoder_dropout\n",
+    "                num_layers = config.encoder_num_layers\n",
+    "                # LSTM\n",
+    "                self.lstm_head = torch.nn.LSTM(\n",
+    "                    input_size=self.input_size,\n",
+    "                    hidden_size=self.hidden_size,\n",
+    "                    num_layers=num_layers,\n",
+    "                    dropout=lstm_dropout,\n",
+    "                    bidirectional=True,\n",
+    "                    batch_first=True,\n",
+    "                )\n",
+    "\n",
+    "                self.mlp_head = torch.nn.Sequential(\n",
+    "                    torch.nn.Linear(self.hidden_size * 2, self.hidden_size * 2),\n",
+    "                    torch.nn.ReLU(),\n",
+    "                    torch.nn.Linear(self.hidden_size * 2, self.output_size),\n",
+    "                )\n",
+    "\n",
+    "            elif self.encoder_type == PromptEncoderReparameterizationType.MLP:\n",
+    "                encoder_num_layers_default = PromptEncoderConfig.encoder_num_layers\n",
+    "                if config.encoder_num_layers != encoder_num_layers_default:\n",
+    "                    warnings.warn(\n",
+    "                        f\"for {self.encoder_type.value}, the argument `encoder_num_layers` is ignored. \"\n",
+    "                        f\"Exactly {encoder_num_layers_default} MLP layers are used.\"\n",
+    "                    )\n",
+    "                layers = [\n",
+    "                    torch.nn.Linear(self.input_size, self.hidden_size),\n",
+    "                    torch.nn.ReLU(),\n",
+    "                    torch.nn.Linear(self.hidden_size, self.hidden_size),\n",
+    "                    torch.nn.ReLU(),\n",
+    "                    torch.nn.Linear(self.hidden_size, self.output_size),\n",
+    "                ]\n",
+    "                self.mlp_head = torch.nn.Sequential(*layers)\n",
+    "\n",
+    "            else:\n",
+    "                raise ValueError(\"Prompt encoder type not recognized. Please use one of MLP (recommended) or LSTM.\")\n",
     "\n",
     "\n",
-    "class ObjectivePeftModelForSeq2SeqLM(PeftModelForSeq2SeqLM):\n",
+    "class AbstractPeftModelForSeq2SeqLM(PeftModelForSeq2SeqLM):\n",
     "    def __init__(self, model, peft_config):\n",
     "        super().__init__(model, peft_config)\n",
     "        self.model = model\n",
@@ -223,13 +277,13 @@
     "\n",
     "        self.word_embeddings = word_embeddings\n",
     "\n",
-    "        prompt_encoder = ObjectivePrefixEncoder(config)\n",
+    "        prompt_encoder = AbstractPromptEncoder(config)\n",
     "\n",
     "        prompt_encoder = prompt_encoder.to(self.device)\n",
     "        self.prompt_encoder.update(torch.nn.ModuleDict({adapter_name: prompt_encoder}))\n",
     "        \n",
     "        self.prompt_tokens[adapter_name] = torch.arange(\n",
-    "            config.num_virtual_tokens * config.num_objects * config.num_transformer_submodules\n",
+    "            config.num_virtual_tokens * config.num_subjects * config.num_transformer_submodules\n",
     "        ).long()\n",
     "\n",
     "    \n",
@@ -252,49 +306,16 @@
     "            #     .expand(batch_size, -1)\n",
     "            #     .to(prompt_encoder.embedding.weight.device)\n",
     "            # )\n",
-    "            raise ValueError(\"object_ids is None, please provide object_ids for ObjectivePeftModelForSeq2SeqLM\")\n",
+    "            raise ValueError(\"object_ids is None, please provide object_ids for AbstractPeftModelForSeq2SeqLM\")\n",
     "        \n",
     "\n",
-    "        # prompt_tokens = prompt_tokens[:, : peft_config.num_virtual_tokens]\n",
     "        if peft_config.inference_mode:\n",
-    "            # past_key_values = prompt_encoder.embedding.weight.repeat(batch_size, 1, 1)\n",
+    "            # prompts = prompt_encoder.embedding.weight\n",
     "            # TODO: add support for inference mode\n",
     "            pass\n",
-    "\n",
     "        else:\n",
-    "            past_key_values = prompt_encoder(prompt_tokens)\n",
-    "        if self.base_model_torch_dtype is not None:\n",
-    "            past_key_values = past_key_values.to(self.base_model_torch_dtype)\n",
-    "        past_key_values = past_key_values.view(\n",
-    "            batch_size,\n",
-    "            peft_config.num_virtual_tokens,\n",
-    "            peft_config.num_layers * 2,\n",
-    "            peft_config.num_attention_heads,\n",
-    "            peft_config.token_dim // peft_config.num_attention_heads,\n",
-    "        )\n",
-    "        if peft_config.num_transformer_submodules == 2:\n",
-    "            past_key_values = torch.cat([past_key_values, past_key_values], dim=2)\n",
-    "        past_key_values = past_key_values.permute([2, 0, 3, 1, 4]).split(\n",
-    "            peft_config.num_transformer_submodules * 2\n",
-    "        )\n",
-    "        if TRANSFORMERS_MODELS_TO_PREFIX_TUNING_POSTPROCESS_MAPPING.get(self.config.model_type, None) is not None:\n",
-    "            post_process_fn = TRANSFORMERS_MODELS_TO_PREFIX_TUNING_POSTPROCESS_MAPPING[self.config.model_type]\n",
-    "            past_key_values = post_process_fn(past_key_values)\n",
-    "        elif peft_config.num_transformer_submodules == 1:\n",
-    "            # Dont' apply this to encoder-decoder models and not to models requiring special processing.\n",
-    "            # local import in case users use a very old transformers version\n",
-    "            past_key_values = DynamicCache.from_legacy_cache(past_key_values)\n",
-    "        elif peft_config.num_transformer_submodules == 2 and self.base_model._supports_cache_class:\n",
-    "            # Dont' apply this to encoder-decoder models that don't support new Cachc format yet\n",
-    "            # If we don't apply this, prefix-tuning fails to update cross-attn cache\n",
-    "            past_key_values = EncoderDecoderCache.from_legacy_cache(past_key_values)\n",
-    "            past_key_values.cross_attention_cache = DynamicCache()\n",
-    "            past_key_values.is_updated = {\n",
-    "                layer_idx: False for layer_idx in range(len(past_key_values.cross_attention_cache.key_cache))\n",
-    "            }\n",
-    "        map_cache_to_layer_device_map(self.get_base_model(), past_key_values)  # no-op if not a Cache instance\n",
-    "        return past_key_values\n",
-    "\n",
+    "            prompts = prompt_encoder(prompt_tokens) # (batch_size, num_virtual_tokens, hidden_size)\n",
+    "        return prompts\n",
     "    def forward(\n",
     "        self,\n",
     "        input_ids=None,\n",
@@ -307,10 +328,14 @@
     "        output_attentions=None,\n",
     "        output_hidden_states=None,\n",
     "        return_dict=None,\n",
-    "        task_ids=None,\n",
+    "        object_ids=None,\n",
     "\n",
     "        **kwargs,\n",
     "    ):\n",
+    "        \"\"\"\n",
+    "        args:\n",
+    "        object_ids: (batch_size, num_subjects) tensor of object ids. The object ids are used to select the prompt tokens\n",
+    "        \"\"\"\n",
     "        peft_config = self.active_peft_config\n",
     "        batch_size = _get_batch_size(input_ids, inputs_embeds)\n",
     "        if decoder_attention_mask is not None:\n",
@@ -348,9 +373,11 @@
     "            )\n",
     "            kwargs[\"attention_mask\"] = torch.cat((prefix_attention_mask, attention_mask), dim=1)\n",
     "\n",
-    "        prompts = self.get_prompt(batch_size=batch_size)\n",
+    "        prompts = self.get_prompt(batch_size=batch_size, object_ids=object_ids)\n",
     "        prompts = prompts.to(inputs_embeds.dtype)\n",
-    "        inputs_embeds = torch.cat((prompts[:, : peft_config.num_virtual_tokens], inputs_embeds), dim=1)\n",
+    "\n",
+    "        # TODO: merge prompt and input embeddings\n",
+    "        # inputs_embeds = torch.cat((prompts[:, : peft_config.num_virtual_tokens], inputs_embeds), dim=1)\n",
     "\n",
     "        return self.base_model(\n",
     "            inputs_embeds=inputs_embeds,\n",
