--- a/test.ipynb
+++ b/test.ipynb
@@ -637,6 +637,8 @@
     "\n",
     "tokenizer = AutoTokenizer.from_pretrained(model_name_or_path)\n",
     "emotion_name_to_id = {name:i for i, name in enumerate(raw_train_df['Emotion'].unique())}\n",
+    "query_id = len(emotion_name_to_id)\n",
+    "\n",
     "def preprocess_function(examples):\n",
     "    # print(examples)\n",
     "    utterance = examples[text_column]\n",
@@ -661,33 +663,102 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 81,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0       [[[tensor(92), tensor(27), tensor(47), tensor(...\n",
-       "1       [[[tensor(299), tensor(258), tensor(113), tens...\n",
-       "2       [[[tensor(9459), tensor(6), tensor(2963), tens...\n",
-       "3       [[[tensor(3359), tensor(82), tensor(601), tens...\n",
-       "4       [[[tensor(9459), tensor(55), tensor(1)]], [[te...\n",
-       "                              ...                        \n",
-       "1033    [[[tensor(9459), tensor(6), tensor(2963), tens...\n",
-       "1034    [[[tensor(363), tensor(81), tensor(140), tenso...\n",
-       "1035    [[[tensor(9459), tensor(18), tensor(13133), te...\n",
-       "1036    [[[tensor(15868), tensor(6), tensor(103), tens...\n",
-       "1037    [[[tensor(9459), tensor(5), tensor(1)]], [[ten...\n",
-       "Name: UtteranceID, Length: 1038, dtype: object"
+       "[tensor([[  92,   27,   47,    8,  500,  568,   30,   82,  349,   22,    7, 3508,\n",
+       "            45,    8,  480,  434, 4525,   12,    3, 8727, 5783,  358,    5,    1]]),\n",
+       " tensor([[ 148,  398,   22,  162,  141,   39, 1780,  423,    5,    1]]),\n",
+       " tensor([[466,  27, 410,   5, 466,  27, 410,   5,   1]]),\n",
+       " tensor([[ 264,  752,   22,    7, 1350,    3,    9,  385,  720,   81,   39, 9353,\n",
+       "             5,    1]]),\n",
+       " tensor([[ 499, 9353,   58,  432,  269,    5,    1]]),\n",
+       " tensor([[ 852,   25,   22,  195,   36, 6904,    3,    9,  829, 4889,    6,   78,\n",
+       "            25,   22,  195,   43,    3,    9,  418,   13, 9353,    5,    1]]),\n",
+       " tensor([[ 27, 217,   5,   1]]),\n",
+       " tensor([[  299,   132,    22,   195,    36,  2361,   604,   151,   365,    25,\n",
+       "             78,    25,    54, 11986,     3,     9,   824,   866,    30,   135,\n",
+       "              5,     1]]),\n",
+       " tensor([[1804,   12,  214,    5,    1]]),\n",
+       " tensor([[ 101,   54,  281,  139, 2736,    1]]),\n",
+       " tensor([[465, 278,  22,  17,  27,  36, 122,  13,  25,  55,   1]]),\n",
+       " tensor([[  432,   269,   258,     6,    62,    22,   195,    43,     3,     9,\n",
+       "              3, 14339,  1525,    21,    25,    30,  2089,     6,    68,    27,\n",
+       "            317,    27,    54,   497,    28,   128,  3410,     6,    25,    22,\n",
+       "            195,  1400,    16,   168,   270,     5,     1]]),\n",
+       " tensor([[11291, 10769,     1]]),\n",
+       " tensor([[20510,     5,   148,    54,  4839,     1]])]"
       ]
      },
-     "execution_count": 74,
+     "execution_count": 81,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "dialogue_train_df[\"UtteranceID\"]"
+    "dialogue_train_df[\"UtteranceID\"][0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 75,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0              [0, 0, 0, 0, 1, 0, 0, 0, 0, 0, 2, 0, 1, 0]\n",
+       "1                                   [1, 3, 1, 2, 0, 0, 0]\n",
+       "2                 [0, 0, 4, 3, 1, 0, 5, 3, 0, 0, 4, 0, 4]\n",
+       "3                             [1, 1, 1, 0, 0, 0, 1, 3, 0]\n",
+       "4           [1, 4, 1, 0, 0, 0, 0, 0, 4, 4, 4, 3, 0, 0, 0]\n",
+       "                              ...                        \n",
+       "1033                                            [0, 4, 1]\n",
+       "1034                                [6, 0, 6, 0, 0, 6, 4]\n",
+       "1035    [4, 3, 1, 3, 1, 0, 1, 0, 3, 0, 6, 0, 0, 0, 0, ...\n",
+       "1036                                            [0, 0, 0]\n",
+       "1037    [0, 4, 0, 0, 1, 5, 0, 5, 1, 0, 0, 5, 5, 0, 0, ...\n",
+       "Name: EmotionID, Length: 1038, dtype: object"
+      ]
+     },
+     "execution_count": 75,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dialogue_train_df[\"EmotionID\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 93,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "972"
+      ]
+     },
+     "execution_count": 93,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# sum up the total number of tokens in each dialogue\n",
+    "max_length=0\n",
+    "for utts in dialogue_train_df[\"UtteranceID\"]:\n",
+    "    length = 0\n",
+    "    for utt in utts:\n",
+    "        length += utt.shape[1]+num_virtual_tokens\n",
+    "    if length > max_length:\n",
+    "        max_length = length\n",
+    "max_length\n"
    ]
   },
   {
@@ -697,7 +768,10 @@
    "outputs": [],
    "source": [
     "from torch.utils.data import Dataset, DataLoader\n",
+    "import bisect\n",
     "\n",
+    "\n",
+    "num_virtual_tokens = 20\n",
     "class ProgressiveDialogueDataset(Dataset):\n",
     "    def __init__(self, dialogue_data, utterance_name=\"UtteranceID\", emotion_name=\"EmotionID\", max_length=None):\n",
     "        \"\"\"\n",
@@ -705,12 +779,21 @@
     "            dialogue_data: A list of lists, where each inner list contains sentences\n",
     "                           from one dialogue.\n",
     "        \"\"\"\n",
-    "        utterances = dialogue_data[utterance_name]\n",
-    "        emotions = dialogue_data[emotion_name]\n",
+    "        self.utterances = dialogue_data[utterance_name]\n",
+    "        self.emotions = dialogue_data[emotion_name]\n",
     "\n",
     "        if max_length is None:\n",
-    "            self.max_length = max([len(utt) for utt in self.utterances])\n",
-    "        self.cumulative_sentence_counts = [0]\n",
+    "            max_length=0\n",
+    "            for utts in self.utterances:\n",
+    "                length = 0\n",
+    "                for utt in utts:\n",
+    "                    length += utt.shape[1]+num_virtual_tokens\n",
+    "                if length > max_length:\n",
+    "                    max_length = length\n",
+    "        self.max_length = max_length\n",
+    "\n",
+    "\n",
+    "        self.cumulative_sentence_counts = []\n",
     "        self.row_lengths = [len(row) for row in dialogue_data]\n",
     "        self.total_sentences = 0\n",
     "        for length in self.row_lengths:\n",
@@ -721,21 +804,41 @@
     "        return self.total_sentences\n",
     "\n",
     "    def __getitem__(self, idx):\n",
-    "        # Find which row this index belongs to\n",
-    "        row_index = 0\n",
-    "        while self.cumulative_sentence_counts[row_index + 1] <= idx:\n",
-    "            row_index += 1\n",
+    "\n",
+    "        # # Find which row this index belongs to\n",
+    "        # row_index = 0\n",
+    "        # while self.cumulative_sentence_counts[row_index + 1] <= idx:\n",
+    "        #     row_index += 1\n",
+    "        row_index = bisect.bisect_right(self.cumulative_sentence_counts, idx)\n",
     "\n",
     "        # Find the index of the sentence within that row\n",
     "        sentence_index = idx - self.cumulative_sentence_counts[row_index]\n",
     "\n",
     "        # Get the progressive sequence of sentences\n",
     "        # TODO: check if this compatible with \n",
-    "        output_utterances = self.utterances[row_index][:sentence_index + 1]\n",
-    "        output_emotions = self.emotions[row_index][:sentence_index]\n",
-    "        output_labels = self.emotions[row_index][sentence_index]\n",
+    "        utterances = self.utterances[row_index][:sentence_index + 1]\n",
+    "        # put 20 padding tokens at the beginning of each utterance\n",
+    "        for i in range(len(utterances)):\n",
+    "            utterances[i] = torch.cat([torch.zeros((1, num_virtual_tokens), dtype=torch.long), utterances[i]], dim=1)\n",
+    "        # concatenate the utterances into a single tensor\n",
+    "        utterances = torch.cat(utterances, dim=1)\n",
     "\n",
-    "        return self.dialogue_data[row_index][:sentence_index + 1]\n",
+    "        # truncate the utterances to max_length from the beginning\n",
+    "        if utterances.shape[1] > self.max_length:\n",
+    "            utterances = utterances[:, -self.max_length:]\n",
+    "            attention_mask = torch.ones((1, self.max_length), dtype=torch.long)\n",
+    "        else:\n",
+    "            # TODO\n",
+    "            pass\n",
+    "\n",
+    "        emotions = self.emotions[row_index][:sentence_index]\n",
+    "        labels = self.emotions[row_index][sentence_index]\n",
+    "\n",
+    "        return {\n",
+    "            \"UtteranceID\": utterances,\n",
+    "            \"EmotionID\": emotions,\n",
+    "            \"Label\": labels,\n",
+    "        }\n",
     "\n",
     "\n"
    ]
