Done ProgressiveDialogueDataset; TODO: make a dialogue process process to transform generate the daaset to avoid doing __getitem__, for efficiency

--- a/test.ipynb
+++ b/test.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -305,8 +305,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Done part"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -318,7 +325,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -566,7 +573,7 @@
        "[9989 rows x 11 columns]"
       ]
      },
-     "execution_count": 70,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -581,7 +588,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -599,7 +606,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -613,12 +620,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Tokenize the data"
+    "### Tokenize the data"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 72,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -639,21 +646,21 @@
     "emotion_name_to_id = {name:i for i, name in enumerate(raw_train_df['Emotion'].unique())}\n",
     "query_id = len(emotion_name_to_id)\n",
     "\n",
-    "def preprocess_function(examples):\n",
+    "def tokenize_function(examples):\n",
     "    # print(examples)\n",
     "    utterance = examples[text_column]\n",
     "    emotion = examples[label_column]\n",
-    "    utterance_id = tokenizer(utterance, max_length=max_length, padding=False, truncation=True, return_tensors=\"pt\")[\"input_ids\"]\n",
+    "    utterance_id = tokenizer(utterance, max_length=max_length, padding=False, truncation=False, return_tensors=\"pt\")[\"input_ids\"]\n",
     "    emotion_id = emotion_name_to_id[emotion]\n",
     "    \n",
     "    return {\"Dialogue_ID\":examples[\"Dialogue_ID\"], \"UtteranceID\": utterance_id, \"EmotionID\": emotion_id}\n",
     "    \n",
-    "train_df = train_df.apply(\n",
-    "    preprocess_function,\n",
+    "dialogue_train_df = train_df.apply(\n",
+    "    tokenize_function,\n",
     "    axis=1,\n",
     "    result_type=\"expand\",\n",
     ")\n",
-    "dialogue_train_df = train_df.groupby('Dialogue_ID').agg(list).reset_index()\n",
+    "dialogue_train_df = dialogue_train_df.groupby('Dialogue_ID').agg(list).reset_index()\n",
     "\n",
     "# train_dataloader = DataLoader(\n",
     "#     train_dataset, shuffle=True, collate_fn=default_data_collator, batch_size=batch_size, pin_memory=True\n",
@@ -663,7 +670,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -693,7 +709,7 @@
        " tensor([[20510,     5,   148,    54,  4839,     1]])]"
       ]
      },
-     "execution_count": 81,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -704,7 +720,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -724,7 +740,7 @@
        "Name: EmotionID, Length: 1038, dtype: object"
       ]
      },
-     "execution_count": 75,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -734,36 +750,15 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 93,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "972"
-      ]
-     },
-     "execution_count": 93,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
    "source": [
-    "# sum up the total number of tokens in each dialogue\n",
-    "max_length=0\n",
-    "for utts in dialogue_train_df[\"UtteranceID\"]:\n",
-    "    length = 0\n",
-    "    for utt in utts:\n",
-    "        length += utt.shape[1]+num_virtual_tokens\n",
-    "    if length > max_length:\n",
-    "        max_length = length\n",
-    "max_length\n"
+    "### ProgressiveDialogueDataset Class"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -771,9 +766,8 @@
     "import bisect\n",
     "\n",
     "\n",
-    "num_virtual_tokens = 20\n",
     "class ProgressiveDialogueDataset(Dataset):\n",
-    "    def __init__(self, dialogue_data, utterance_name=\"UtteranceID\", emotion_name=\"EmotionID\", max_length=None):\n",
+    "    def __init__(self, dialogue_data, utterance_name=\"UtteranceID\", emotion_name=\"EmotionID\", max_length=None, utterance_padding_token_id=0, query_id=7, num_virtual_tokens=20):\n",
     "        \"\"\"\n",
     "        Args:\n",
     "            dialogue_data: A list of lists, where each inner list contains sentences\n",
@@ -792,9 +786,13 @@
     "                    max_length = length\n",
     "        self.max_length = max_length\n",
     "\n",
+    "        self.query_id = query_id\n",
+    "        self.utterance_padding_token_id = utterance_padding_token_id\n",
+    "        self.num_virtual_tokens = num_virtual_tokens\n",
+    "\n",
     "\n",
     "        self.cumulative_sentence_counts = []\n",
-    "        self.row_lengths = [len(row) for row in dialogue_data]\n",
+    "        self.row_lengths = [len(row) for row in self.utterances]\n",
     "        self.total_sentences = 0\n",
     "        for length in self.row_lengths:\n",
     "            self.total_sentences += length\n",
@@ -805,42 +803,68 @@
     "\n",
     "    def __getitem__(self, idx):\n",
     "\n",
-    "        # # Find which row this index belongs to\n",
-    "        # row_index = 0\n",
-    "        # while self.cumulative_sentence_counts[row_index + 1] <= idx:\n",
-    "        #     row_index += 1\n",
+    "        # Find which row this index belongs to\n",
     "        row_index = bisect.bisect_right(self.cumulative_sentence_counts, idx)\n",
     "\n",
     "        # Find the index of the sentence within that row\n",
     "        sentence_index = idx - self.cumulative_sentence_counts[row_index]\n",
     "\n",
-    "        # Get the progressive sequence of sentences\n",
-    "        # TODO: check if this compatible with \n",
+    "        # Get the progressive sequence of sentences, save space for virtual tokens and concatenate every sentence\n",
     "        utterances = self.utterances[row_index][:sentence_index + 1]\n",
-    "        # put 20 padding tokens at the beginning of each utterance\n",
-    "        for i in range(len(utterances)):\n",
-    "            utterances[i] = torch.cat([torch.zeros((1, num_virtual_tokens), dtype=torch.long), utterances[i]], dim=1)\n",
-    "        # concatenate the utterances into a single tensor\n",
-    "        utterances = torch.cat(utterances, dim=1)\n",
+    "        utterance_lengths = [utt.shape[1] for utt in utterances]\n",
     "\n",
-    "        # truncate the utterances to max_length from the beginning\n",
-    "        if utterances.shape[1] > self.max_length:\n",
-    "            utterances = utterances[:, -self.max_length:]\n",
+    "        # calculate the desired length of the utterance\n",
+    "        begin_index = len(utterance_lengths)\n",
+    "        cumulative_length = 0\n",
+    "        for i in range(len(utterance_lengths)-1,0-1, -1):\n",
+    "            # add virtual token space to the beginning of the sentence\n",
+    "            utterances[i] = torch.cat([ torch.full((1, self.num_virtual_tokens), self.utterance_padding_token_id, dtype=torch.long), \n",
+    "                                        utterances[i]], dim=1)\n",
+    "            cumulative_length += utterance_lengths[i]+self.num_virtual_tokens\n",
+    "            if cumulative_length > self.max_length:\n",
+    "                break\n",
+    "            begin_index = i\n",
+    "        # concatenate the sentences\n",
+    "        if begin_index == len(utterance_lengths):\n",
+    "            # if the first sentence is too long, we need to truncate it\n",
+    "            utterance = utterances[-1][:self.max_length]\n",
+    "            emotions = [self.query_id]\n",
     "            attention_mask = torch.ones((1, self.max_length), dtype=torch.long)\n",
-    "        else:\n",
-    "            # TODO\n",
-    "            pass\n",
     "\n",
-    "        emotions = self.emotions[row_index][:sentence_index]\n",
+    "        else:\n",
+    "            utterance = torch.cat(utterances[begin_index:], dim=1)\n",
+    "            emotions = self.emotions[row_index][begin_index:sentence_index]\n",
+    "            emotions = emotions + [self.query_id]\n",
+    "            attention_mask = torch.ones((1, utterance.shape[1]), dtype=torch.long)\n",
+    "            attention_mask = torch.cat([attention_mask, torch.zeros((1, self.max_length - utterance.shape[1]), dtype=torch.long)], dim=1)\n",
+    "            utterance = torch.cat([utterance, torch.full((1, self.max_length - utterance.shape[1]), self.utterance_padding_token_id, dtype=torch.long)], dim=1)\n",
+    "\n",
     "        labels = self.emotions[row_index][sentence_index]\n",
     "\n",
     "        return {\n",
-    "            \"UtteranceID\": utterances,\n",
+    "            \"UtteranceID\": utterance,\n",
     "            \"EmotionID\": emotions,\n",
+    "            \"AttentionMask\": attention_mask,\n",
     "            \"Label\": labels,\n",
     "        }\n",
     "\n",
     "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## working part"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def "
    ]
   },
   {
