Done model class; TODO:check label form, and test the model class with the dataset

--- a/try.ipynb
+++ b/try.ipynb
@@ -254,6 +254,91 @@
    "metadata": {},
    "outputs": [
     {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\cheng\\AppData\\Local\\Temp\\ipykernel_35768\\3788082874.py:5: DeprecationWarning: __array_wrap__ must accept context and return_scalar arguments (positionally) in the future. (Deprecated NumPy 2.0)\n",
+      "  temp = (temp * num).unsqueeze(-1).view(-1,1) + np.arange(num)\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "tensor([[ 0,  1,  2,  3,  4],\n",
+       "        [ 5,  6,  7,  8,  9],\n",
+       "        [10, 11, 12, 13, 14],\n",
+       "        [15, 16, 17, 18, 19]])"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import torch\n",
+    "import numpy as np\n",
+    "num=5\n",
+    "temp = torch.tensor([[0, 1, 2, 3]])\n",
+    "temp = (temp * num).unsqueeze(-1).view(-1,1) + np.arange(num)\n",
+    "# temp.view(4,5)\n",
+    "temp"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "-0.3952859044075012 = -0.3952859044075012\n",
+      "-0.7835910320281982 = -0.7835910320281982\n",
+      "-2.2502565383911133 = -2.2502565383911133\n",
+      "-1.1491811275482178 = -1.1491811275482178\n",
+      "-0.7105616331100464 = -0.7105616331100464\n",
+      "2.0537524223327637 = 2.0537524223327637\n",
+      "1.175096035003662 = 1.175096035003662\n",
+      "-0.04815971851348877 = -0.04815971851348877\n",
+      "-1.468549370765686 = -1.468549370765686\n",
+      "-1.6993296146392822 = -1.6993296146392822\n",
+      "0.46951526403427124 = 0.46951526403427124\n",
+      "-0.15227991342544556 = -0.15227991342544556\n",
+      "1.136786937713623 = 1.136786937713623\n",
+      "-1.3757494688034058 = -1.3757494688034058\n",
+      "0.6234840750694275 = 0.6234840750694275\n",
+      "-1.5585829019546509 = -1.5585829019546509\n",
+      "-1.3717739582061768 = -1.3717739582061768\n",
+      "0.3608691692352295 = 0.3608691692352295\n",
+      "1.2200915813446045 = 1.2200915813446045\n",
+      "-1.679436206817627 = -1.679436206817627\n",
+      "0.8870874643325806 = 0.8870874643325806\n",
+      "-0.6561567187309265 = -0.6561567187309265\n",
+      "1.3224388360977173 = 1.3224388360977173\n",
+      "0.09520465135574341 = 0.09520465135574341\n"
+     ]
+    }
+   ],
+   "source": [
+    "import torch\n",
+    "# get 2 tensor of shape (2,3,4)\n",
+    "temp1 = torch.randn(2,3,4)\n",
+    "temp2 = torch.randn(2,3,4)\n",
+    "temp3 = temp1+temp2\n",
+    "for i in range(2):\n",
+    "    for j in range(3):\n",
+    "        for k in range(4):\n",
+    "            print(f\"{temp1[i][j][k]+temp2[i][j][k]} = {temp3[i][j][k]}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
      "ename": "TypeError",
      "evalue": "empty() received an invalid combination of arguments - got (tuple, dtype=NoneType, device=NoneType), but expected one of:\n * (tuple of ints size, *, tuple of names names, torch.memory_format memory_format = None, torch.dtype dtype = None, torch.layout layout = None, torch.device device = None, bool pin_memory = False, bool requires_grad = False)\n * (tuple of ints size, *, torch.memory_format memory_format = None, Tensor out = None, torch.dtype dtype = None, torch.layout layout = None, torch.device device = None, bool pin_memory = False, bool requires_grad = False)\n",
      "output_type": "error",
@@ -352,14 +437,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The index belongs to row: 2\n"
+      "The index belongs to row: 3\n"
      ]
     }
    ],
