add comment for additional dataset(EmoryNLP); pause project progress for now

--- a/test.ipynb
+++ b/test.ipynb
@@ -42,10 +42,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
+    "\n",
+    "# Try Emotion Recognition in Conversation on EmoryNLP\n",
     "# load csv from data/MELD\n",
     "raw_train_df = pd.read_csv(\"data/MELD/train_sent_emo.csv\")\n",
     "raw_valid_df = pd.read_csv(\"data/MELD/dev_sent_emo.csv\")\n",
